feat: 메인 소개 인터페이스 개발

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -15,7 +15,7 @@
 
   &.dark-mode {
     --brand-color: #09ece1;
-    --border-color: #444;
+    --border-color: #2b2d45;
     --button-bg: #22243a;
 
     background-color: var(--bg-dark-mode);
