design: 디자인 수정

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -21,6 +21,8 @@
     background-color: var(--bg-dark-mode);
     color: var(--color-secondary);
   }
+
+  --md-bk-color: #22243a !important;
 }
 
 main {
