--- a/app/globals.scss
+++ b/app/globals.scss
@@ -3,14 +3,14 @@
 @tailwind utilities;
 
 :root {
-  --brand-color: #ee50c9;
-  --color-primary: #222;
+  --brand-color: #e47575;
+  --color-primary: #333333;
   --color-secondary: #ececec;
-  --bg-dark-mode: #12131f;
   --bg-primary-hover: #f0f0f0;
-  --border-color: #ececec;
-  --button-bg: #f5f5f5;
+  --border-color: #dddddd;
+  --button-bg: #f0f0f0;
 
+  background-color: #f5f5f5;
   color: var(--color-primary);
 
   &.dark-mode {
@@ -18,11 +18,9 @@
     --border-color: #2b2d45;
     --button-bg: #22243a;
 
-    background-color: var(--bg-dark-mode);
+    background-color: #12131f;
     color: var(--color-secondary);
   }
-
-  --md-bk-color: #22243a !important;
 }
 
 main {
