--- a/app/globals.scss
+++ b/app/globals.scss
@@ -9,22 +9,20 @@
   --bg-primary-hover: #f0f0f0;
   --border-color: #dddddd;
   --button-bg: #f0f0f0;
-
-  background-color: #f5f5f5;
-  color: var(--color-primary);
+  --background-color: #f5f5f5;
+  --color: #333333;
 
   &.dark-mode {
     --brand-color: #09ece1;
     --border-color: #2b2d45;
     --button-bg: #22243a;
 
-    background-color: #12131f;
-    color: var(--color-secondary);
+    --background-color: #12131f;
+    --color: var(--color-secondary);
   }
-}
 
-main {
-  padding-bottom: 5vmin;
+  background-color: var(--background-color);
+  color: var(--color);
 }
 
 input,
