--- a/app/globals.scss
+++ b/app/globals.scss
@@ -25,6 +25,15 @@
 html,
 body {
   background-color: var(--background-color);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 * {
