--- a/app/globals.scss
+++ b/app/globals.scss
@@ -31,6 +31,7 @@ body {
 }
 
 main {
+  margin-top: 120px;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -39,4 +40,34 @@ main {
 * {
   color: var(--color);
   outline: none;
+}
+
+.ͼo,
+.md-editor-resize-operate,
+.custom-preview {
+  background-color: transparent !important;
+}
+
+.cm-scroller {
+  padding-right: 0 !important;
+}
+
+.md-editor-preview-wrapper {
+  padding: 0 !important;
+}
+
+.md-editor-preview {
+  line-height: 1.8 !important;
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    border-bottom: none !important;
+  }
+
+  hr {
+    margin: 20px 0 !important;
+  }
 }
