feat: 게시글 수정 인터페이스

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -52,7 +52,7 @@ main {
   padding-right: 0 !important;
 }
 
-.md-editor-preview-wrapper {
+.custom-preview.detail .md-editor-preview-wrapper {
   padding: 0 !important;
 }
 
