feat: AWS S3 이미지 업로드

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --accent-color: #09204a;
+  --accent-color: #062359;
 
   --color: #333333;
   --background-color: #e0e0e0;
