--- a/app/globals.scss
+++ b/app/globals.scss
@@ -9,7 +9,10 @@
   --background-color: #f1f1f1;
 
   --border-color: #ddd;
-  --button-background-color: #eee;
+  --button-background-color: #ededed;
+
+  --code-background-color: #e5e5e5;
+  --code-color: #f75d10;
 
   &.dark-mode {
     --accent-color: #09ece1;
@@ -19,6 +22,9 @@
 
     --border-color: #2b2d45;
     --button-background-color: #22243a;
+
+    --code-background-color: #24292e;
+    --code-color: #f75d10;
   }
 }
 
@@ -58,17 +64,39 @@ main {
 }
 
 .md-editor-preview {
+  color: var(--color) !important;
   line-height: 1.8 !important;
+
   h1,
   h2,
   h3,
   h4,
   h5,
   h6 {
+    color: var(--color) !important;
     border-bottom: none !important;
+    margin-top: 1em !important;
+    padding-bottom: 0 !important;
   }
 
   hr {
     margin: 20px 0 !important;
+  }
+
+  :not(pre) > code {
+    font-size: 0.85em !important;
+    word-break: keep-all;
+    border-radius: 0.2em !important;
+    margin-right: 0.15em !important;
+    background-color: var(--code-background-color) !important;
+    color: var(--code-color) !important;
+  }
+
+  .md-editor-code-lang,
+  .md-editor-copy-button {
+    color: #fff !important;
+  }
+  .md-editor-collapse-tips svg {
+    fill: #fff !important;
   }
 }
