feat: 포스트 관리 기능 및 및 UI 컴포넌트 개선

--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -18,3 +18,19 @@
   padding: 0;
   outline: none;
 }
+
+@media (max-width: 1024px) {
+  html {
+    font-size: 14px;
+  }
+}
+@media (max-width: 768px) {
+  html {
+    font-size: 1.666vw;
+  }
+}
+@media (max-width: 480px) {
+  html {
+    font-size: 3vw;
+  }
+}
