refactor: NextJS 버전 다운그레이드 및 UI 개선

--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  ul,
+  ol {
+    list-style: revert;
+  }
+}
+
 :root {
   --primary-color: #12131f;
   --secondary-color: #22243a;
@@ -26,11 +33,11 @@
 }
 @media (max-width: 768px) {
   html {
-    font-size: 2.25vw;
+    font-size: 2.75vw;
   }
 }
 @media (max-width: 480px) {
   html {
-    font-size: 2.75vw;
+    font-size: 3.5vw;
   }
 }
