--- a/app/styles/md-editor.scss
+++ b/app/styles/md-editor.scss
@@ -61,6 +61,10 @@ svg.md-editor-icon {
   height: 1.5em;
 }
 
+.md-editor-preview-wrapper {
+  overflow: hidden;
+}
+
 @media (max-width: 1024px) {
   .md-editor-preview {
     font-size: 1rem;
