--- a/app/styles/md-editor.scss
+++ b/app/styles/md-editor.scss
@@ -17,6 +17,8 @@
   padding: 0 !important;
 }
 .md-editor-preview {
+  --md-theme-heading-color: var(--text-color) !important;
+
   line-height: 1.5 !important;
   h1,
   h2,
