--- a/app/styles/md-editor.scss
+++ b/app/styles/md-editor.scss
@@ -19,7 +19,7 @@
 .md-editor-preview {
   --md-theme-heading-color: var(--text-color) !important;
 
-  line-height: 1.5 !important;
+  line-height: 1.6 !important;
   h1,
   h2,
   h3,
@@ -64,7 +64,7 @@ svg.md-editor-icon {
 }
 
 .md-editor-preview-wrapper {
-  overflow: hidden;
+  overflow: hidden !important;
 }
 
 @media (max-width: 1024px) {
