design: 블로그 라이트 테마 적용

--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -10,12 +10,13 @@
 }
 
 :root {
-  --primary-color: #12131f;
-  --secondary-color: #22243a;
-  --tertiary-color: #2b2d45;
-  --accent-color: #2bc3c8;
-  --accent-color-hover: #45eaf0;
-  --text-color: #ececec;
+  --primary-color: #ffffff;
+  --secondary-color: #f6f6f6;
+  --tertiary-color: #eeeeee;
+  --accent-color: #333575;
+  --accent-color-hover: #5a5db2;
+  --text-color: #333333;
+  --code-text-color: #d33033;
 }
 
 * {
